--- a/.travis.yml
+++ b/.travis.yml
@@ -15,4 +15,4 @@ before_script:
   - git clone --branch=master --depth=1 --quiet git://github.com/WoltLab/WCF.git WCF
 script:
   - find . -type f -name '*.php' -not -path "./WCF/*" -not -path "./vendor/*" |xargs -I file php -l file  > /dev/null
-  - vendor/bin/phpcs -p --extensions=php --standard="`pwd`/WCF/CodeSniff/WCF" --ignore="lib/system/api/" --ignore="WCF/" --ignore="vendor/" .
+  - vendor/bin/phpcs -p --extensions=php --standard="`pwd`/WCF/CodeSniff/WCF" --ignore="CryptLib/" --ignore="WCF/" --ignore="vendor/" .
